--- a/wally-web/src/main/resources/templates/footer.html
+++ b/wally-web/src/main/resources/templates/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-copyright">
         <div class="container">
             <span>Copyright © crainnogao2016</span>
-            <span><a href="/admin/">后台登录</a></span>
+            <span><a href="/admin/?uid=1">后台登录</a></span>
             <span>浙ICP备 17029729</span>
         </div>
     </div>
