--- a/wally-web/src/main/resources/templates/header.html
+++ b/wally-web/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
         <nav class="index-nav">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="/index1/?pageNum=1">
+                    <a href="/index/?pageNum=1">
                         <img src="/images/crainnogao.png" alt="">
                     </a>
                     <ul class="right hide-on-med-and-down" th:each="menu : ${indexModel.menuList}">
